[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Enemy02/Enemy2.gd" type="Script" id=1]
[ext_resource path="res://assets/Enemy02/Animations/Enemy02 Walking_00.png" type="Texture" id=2]
[ext_resource path="res://assets/Enemy02/Animations/Enemy02 Walking_01.png" type="Texture" id=3]
[ext_resource path="res://assets/Enemy02/Animations/Enemy02 Walking_02.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "walking",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 6.71625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.14085, 10 )

[node name="Enemy2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "walking"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.307358, -15.0604 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 15 )
shape = SubResource( 3 )

[node name="RayCastFront" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 60, 0 )
collide_with_areas = true

[node name="RayCastBack" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -60, 0 )
collide_with_areas = true

[node name="1stPos" type="Position2D" parent="."]
position = Vector2( 100, 0 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
